[package]
name = "sos-protocol"
version = "0.16.3"
edition = "2021"
description = "Networking and sync protocol types for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
full = [
  "listen",
  "hashcheck",
  "network-client",
  "pairing",
  "archive",
  "contacts",
  "files",
  "migrate",
  "search",
]
listen = ["tokio-tungstenite"]
hashcheck = ["reqwest"]
network-client = ["reqwest", "bs58", "async-stream", "tokio-util"]
pairing = []
archive = ["sos-sdk/archive"]
contacts = ["sos-sdk/contacts"]
files = ["sos-sdk/files", "sos-account/files"]
migrate = ["sos-account/migrate"]
search = ["sos-account/search"]

[dependencies]
sos-account.workspace = true
sos-core.workspace = true
sos-sdk.workspace = true
sos-database.workspace = true
sos-sync.workspace = true

thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
url.workspace = true
futures.workspace = true
indexmap.workspace = true
rs_merkle.workspace = true
prost.workspace = true
http.workspace = true
bytes.workspace = true
binary-stream.workspace = true
typeshare.workspace = true
sha2.workspace = true
tokio = { version = "1", features = ["rt",  "macros"] }

# network-client
# reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "rustls-tls", "stream"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "stream"]
optional = true

[dev-dependencies]
anyhow = "1"

[build-dependencies]
rustc_version = "0.4.1"
prost-build = "0.13"
protoc-bin-vendored = "3"
